[package]
name = "bedrock"
version = "0.1.0"
edition = "2021"

[features]
render = ["dep:typst", "dep:typst-pdf", "dep:typst-kit", "dep:time", "dep:lazy_static", "dep:pulldown-cmark", "dep:pulldown-cmark-ast", "dep:comemo", "dep:once_cell"]
# Make it so we don't have recompile when the template.typ is changed
dev = ["render"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.11"
toml_edit = { version = "0.22.22", features = ["serde"] }
tokio = { version = "1.42.0", features = ["fs", "io-util"], optional = true }
miette = { version = "7.4.0", features = ["fancy"] }
phf = { version = "0.11.3", features = ["macros"] }
strum = { version = "0.26.3", features = ["derive", "phf"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
base62 = "2.2.1"
tempfile = "3.16.0"

typst = { version = "0.12.0", optional = true }
typst-pdf = { version = "0.12.0", optional = true }
typst-kit = { version = "0.12.0", features = ["embed-fonts"], optional = true }
time = { version = "0.3.37", optional = true }
lazy_static = { version = "1.5.0", optional = true }
pulldown-cmark-ast = { version = "0.1.0", optional = true }
comemo = { version = "0.4.0", optional = true }
# using 0.11.0 for `pulldown-cmark-ast`
pulldown-cmark = { version = "0.11.0", optional = true }
once_cell = { version = "1.20.3", optional = true }
serde_json = "1.0.138"


[dev-dependencies]
bedrock = { path = ".", features = ["tokio", "render"] }
tokio = { version = "1.42.0", features = ["full"] }
