[package]
name = "bedrock"
version = "0.1.0"
edition = "2021"

[features]
dev = [] # Make it so we don't have recompile when the template.typ is changed

[dependencies]
comemo = "0.4.0"
lazy_static = "1.5.0"
miette = { version = "7.4.0", features = ["fancy"] }
phf = { version = "0.11.3", features = ["macros"] }
pulldown-cmark = "0.11.0" # using 0.11.0 for `pulldown-cmark-ast`
pulldown-cmark-ast = "0.1.0"
serde_json = "1.0.138"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "phf"] }
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["fs", "io-util"], optional = true }
toml_edit = { version = "0.22.22", features = ["serde"] }
typst = "0.12.0"
typst-kit = { version = "0.12.0", features = ["embed-fonts"] }
typst-pdf = "0.12.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
typst-svg = "0.12.0"
ecow = "0.2.3"
syntect = "5.2.0"

[dev-dependencies]
bedrock = { path = ".", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
